chore: 移除未使用的图片资源并更新logo引用
清理assets/images目录中大量未使用的图片文件，减少项目体积
更新index.html中logo图片的引用路径，确保正确显示
添加.vscode/settings.json配置文件，设置默认预览路径

--- a/index.html
+++ b/index.html
@@ -27,8 +27,12 @@
             alt="EaglesLab 英格科技"
             class="logo-full"
           />
-          <img src="images/logo.png" alt="EaglesLab" class="logo-icon" />
+          <img
             src="assets/images/favicon.ico"
+            alt="EaglesLab"
+            class="logo-icon"
+          />
+        </a>
         <ul class="nav-menu">
           <li><a href="#top">首页</a></li>
           <li><a href="#courses">陪跑服务</a></li>
@@ -731,11 +735,10 @@
         <div class="footer-content">
           <div class="footer-brand">
             <a href="#top" class="footer-logo">
-              <img src="images/logo.png" alt="EaglesLab 英格科技" />
+              <img src="assets/images/logo.png" alt="EaglesLab 英格科技" />
             </a>
             <p>专注大学生升学和就业的解决方案</p>
           </div>
-              <img src="assets/images/logo.png" alt="EaglesLab 英格科技" />
           <div class="footer-links">
             <div class="footer-column">
               <h4>陪跑服务</h4>
