feat(certifications): 用真实机构徽章替换占位符图标
- 新增南邮、金科、中通服等九个合作机构的认证徽章图片
- 将占位符图标和文本替换为机构徽章图片展示
- 调整认证卡片布局为三列网格以适应图片比例
- 优化图片显示效果，添加悬停交互和视觉增强

--- a/index.html
+++ b/index.html
@@ -319,20 +319,76 @@
           <h3 class="certifications-title">资质认证</h3>
           <div class="certifications-grid">
             <div class="cert-card">
-              <div class="cert-icon">📜</div>
-              <p>教育培训资质</p>
+              <img
+                class="cert-image"
+                src="assets/images/certifications/中科曙光.png"
+                alt="中科曙光"
+                loading="lazy"
+              />
             </div>
             <div class="cert-card">
-              <div class="cert-icon">🏆</div>
-              <p>优秀培训机构</p>
+              <img
+                class="cert-image"
+                src="assets/images/certifications/中通服.png"
+                alt="中通服"
+                loading="lazy"
+              />
             </div>
             <div class="cert-card">
-              <div class="cert-icon">✅</div>
-              <p>ISO质量认证</p>
+              <img
+                class="cert-image"
+                src="assets/images/certifications/南邮.png"
+                alt="南邮"
+                loading="lazy"
+              />
             </div>
             <div class="cert-card">
-              <div class="cert-icon">🎖️</div>
-              <p>诚信经营单位</p>
+              <img
+                class="cert-image"
+                src="assets/images/certifications/奇安信.png"
+                alt="奇安信"
+                loading="lazy"
+              />
+            </div>
+            <div class="cert-card">
+              <img
+                class="cert-image"
+                src="assets/images/certifications/江大实训.png"
+                alt="江大实训"
+                loading="lazy"
+              />
+            </div>
+            <div class="cert-card">
+              <img
+                class="cert-image"
+                src="assets/images/certifications/江大实践.png"
+                alt="江大实践"
+                loading="lazy"
+              />
+            </div>
+            <div class="cert-card">
+              <img
+                class="cert-image"
+                src="assets/images/certifications/江大青年创业.png"
+                alt="江大青年创业"
+                loading="lazy"
+              />
+            </div>
+            <div class="cert-card">
+              <img
+                class="cert-image"
+                src="assets/images/certifications/紫金学院.png"
+                alt="紫金学院"
+                loading="lazy"
+              />
+            </div>
+            <div class="cert-card">
+              <img
+                class="cert-image"
+                src="assets/images/certifications/金科.png"
+                alt="金科"
+                loading="lazy"
+              />
             </div>
           </div>
         </div>
