feat: 添加高校合作院校标志并实现滚动展示
- 新增多所合作大学的 logo 图片资源
- 将静态的“高校合作”列表重构为无限循环的滚动展示组件
- 优化视觉效果，添加悬停暂停和灰度滤镜过渡
- 更新部署配置，排除 .vscode 目录
- 简化 logo 的 alt 文本

--- a/index.html
+++ b/index.html
@@ -22,11 +22,7 @@
     <header class="header">
       <nav class="nav container">
         <a href="#top" class="logo">
-          <img
-            src="assets/images/logo.png"
-            alt="EaglesLab 英格科技"
-            class="logo-full"
-          />
+          <img src="assets/images/logo.png" alt="EaglesLab" class="logo-full" />
           <img
             src="assets/images/favicon.ico"
             alt="EaglesLab"
@@ -286,30 +282,173 @@
 
         <div class="partners-section">
           <h3 class="partners-title">高校合作</h3>
-          <div class="partners-grid">
-            <div class="partner-logo">
-              <div class="logo-placeholder">南京大学</div>
-            </div>
-            <div class="partner-logo">
-              <div class="logo-placeholder">东南大学</div>
-            </div>
-            <div class="partner-logo">
-              <div class="logo-placeholder">南京理工大学</div>
-            </div>
-            <div class="partner-logo">
-              <div class="logo-placeholder">南京邮电大学</div>
-            </div>
-            <div class="partner-logo">
-              <div class="logo-placeholder">南京师范大学</div>
-            </div>
-            <div class="partner-logo">
-              <div class="logo-placeholder">苏州大学</div>
-            </div>
-            <div class="partner-logo">
-              <div class="logo-placeholder">河海大学</div>
-            </div>
-            <div class="partner-logo">
-              <div class="logo-placeholder">南京航空航天大学</div>
+          <div
+            class="partners-grid partners-grid--marquee"
+            aria-label="高校合作"
+          >
+            <div class="partners-track">
+              <div class="partner-logo partner-logo--marquee">
+                <img
+                  class="partner-logo-img"
+                  src="assets/images/universities/ujs.png"
+                  alt="江苏大学"
+                  loading="lazy"
+                />
+              </div>
+              <div class="partner-logo partner-logo--marquee">
+                <img
+                  class="partner-logo-img"
+                  src="assets/images/universities/just.png"
+                  alt="江苏科技大学"
+                  loading="lazy"
+                />
+              </div>
+              <div class="partner-logo partner-logo--marquee">
+                <img
+                  class="partner-logo-img"
+                  src="assets/images/universities/njupt.png"
+                  alt="南京邮电大学"
+                  loading="lazy"
+                />
+              </div>
+              <div class="partner-logo partner-logo--marquee">
+                <img
+                  class="partner-logo-img"
+                  src="assets/images/universities/cczu.svg"
+                  alt="常州大学"
+                  loading="lazy"
+                />
+              </div>
+              <div class="partner-logo partner-logo--marquee">
+                <img
+                  class="partner-logo-img"
+                  src="assets/images/universities/jit.png"
+                  alt="金陵科技学院"
+                  loading="lazy"
+                />
+              </div>
+              <div class="partner-logo partner-logo--marquee">
+                <img
+                  class="partner-logo-img"
+                  src="assets/images/universities/jjxy.png"
+                  alt="京江学院"
+                  loading="lazy"
+                />
+              </div>
+              <div class="partner-logo partner-logo--marquee">
+                <img
+                  class="partner-logo-img"
+                  src="assets/images/universities/njit.png"
+                  alt="南京工程学院"
+                  loading="lazy"
+                />
+              </div>
+              <div class="partner-logo partner-logo--marquee">
+                <img
+                  class="partner-logo-img"
+                  src="assets/images/universities/nuist.png"
+                  alt="南京信息工程大学"
+                  loading="lazy"
+                />
+              </div>
+              <div class="partner-logo partner-logo--marquee">
+                <img
+                  class="partner-logo-img"
+                  src="assets/images/universities/yzu.png"
+                  alt="扬州大学"
+                  loading="lazy"
+                />
+              </div>
+              <div class="partner-logo partner-logo--marquee">
+                <img
+                  class="partner-logo-img"
+                  src="assets/images/universities/njtech.png"
+                  alt="南京工业大学"
+                  loading="lazy"
+                />
+              </div>
+              <div class="partners-dup" aria-hidden="true">
+                <div class="partner-logo partner-logo--marquee">
+                  <img
+                    class="partner-logo-img"
+                    src="assets/images/universities/ujs.png"
+                    alt="江苏大学"
+                    loading="lazy"
+                  />
+                </div>
+                <div class="partner-logo partner-logo--marquee">
+                  <img
+                    class="partner-logo-img"
+                    src="assets/images/universities/just.png"
+                    alt="江苏科技大学"
+                    loading="lazy"
+                  />
+                </div>
+                <div class="partner-logo partner-logo--marquee">
+                  <img
+                    class="partner-logo-img"
+                    src="assets/images/universities/njupt.png"
+                    alt="南京邮电大学"
+                    loading="lazy"
+                  />
+                </div>
+                <div class="partner-logo partner-logo--marquee">
+                  <img
+                    class="partner-logo-img"
+                    src="assets/images/universities/cczu.svg"
+                    alt="常州大学"
+                    loading="lazy"
+                  />
+                </div>
+                <div class="partner-logo partner-logo--marquee">
+                  <img
+                    class="partner-logo-img"
+                    src="assets/images/universities/jit.png"
+                    alt="金陵科技学院"
+                    loading="lazy"
+                  />
+                </div>
+                <div class="partner-logo partner-logo--marquee">
+                  <img
+                    class="partner-logo-img"
+                    src="assets/images/universities/jjxy.png"
+                    alt="京江学院"
+                    loading="lazy"
+                  />
+                </div>
+                <div class="partner-logo partner-logo--marquee">
+                  <img
+                    class="partner-logo-img"
+                    src="assets/images/universities/njit.png"
+                    alt="南京工程学院"
+                    loading="lazy"
+                  />
+                </div>
+                <div class="partner-logo partner-logo--marquee">
+                  <img
+                    class="partner-logo-img"
+                    src="assets/images/universities/nuist.png"
+                    alt="南京信息工程大学"
+                    loading="lazy"
+                  />
+                </div>
+                <div class="partner-logo partner-logo--marquee">
+                  <img
+                    class="partner-logo-img"
+                    src="assets/images/universities/yzu.png"
+                    alt="扬州大学"
+                    loading="lazy"
+                  />
+                </div>
+                <div class="partner-logo partner-logo--marquee">
+                  <img
+                    class="partner-logo-img"
+                    src="assets/images/universities/njtech.png"
+                    alt="南京工业大学"
+                    loading="lazy"
+                  />
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -791,7 +930,7 @@
         <div class="footer-content">
           <div class="footer-brand">
             <a href="#top" class="footer-logo">
-              <img src="assets/images/logo.png" alt="EaglesLab 英格科技" />
+              <img src="assets/images/logo.png" alt="EaglesLab" />
             </a>
             <p>专注大学生升学和就业的解决方案</p>
           </div>
