feat: 添加服务独立页面并改进预览脚本
为实习辅导、技能提升等六个服务创建独立的HTML页面，使用户可以直接访问特定服务详情
在head.html中修复CSS路径，确保在独立页面中样式正确加载
更新Vite配置以包含新页面作为构建入口，并添加预览脚本以支持美观URL预览
修改导航和英雄区域的链接，将浮动卡片改为可点击，引导用户至对应服务页

--- a/src/html/sections/footer.html
+++ b/src/html/sections/footer.html
@@ -4,7 +4,7 @@
     <div class="footer-content">
       <div class="footer-brand">
         <a href="#top" class="footer-logo">
-          <img src="assets/logo.png" alt="EaglesLab" />
+          <img src="/assets/logo.png" alt="EaglesLab" />
         </a>
         <p>专注大学生升学和就业的解决方案</p>
       </div>
@@ -54,7 +54,7 @@
               <div class="qr-mini-placeholder">
                 <img
                   class="social-qr-image"
-                  src="assets/images/socials/vx.png"
+                  src="/assets/images/socials/vx.png"
                   alt="微信公众号二维码"
                   loading="lazy"
                 />
@@ -65,7 +65,7 @@
               <div class="qr-mini-placeholder">
                 <img
                   class="social-qr-image"
-                  src="assets/images/socials/douyin.png"
+                  src="/assets/images/socials/douyin.png"
                   alt="抖音号二维码"
                   loading="lazy"
                 />
