--- a/src/html/sections/hero.html
+++ b/src/html/sections/hero.html
@@ -46,30 +46,54 @@
     </div>
 
     <div class="hero-visual">
-      <div class="floating-card card-1">
+      <a
+        class="floating-card card-1"
+        href="/internship/"
+        aria-label="查看实习辅导详情"
+      >
         <div class="card-icon">💡</div>
         <div class="card-text">实习辅导</div>
-      </div>
-      <div class="floating-card card-2">
+      </a>
+      <a
+        class="floating-card card-2"
+        href="/skills/"
+        aria-label="查看技能提升详情"
+      >
         <div class="card-icon">🚀</div>
         <div class="card-text">技能提升</div>
-      </div>
-      <div class="floating-card card-3">
+      </a>
+      <a
+        class="floating-card card-3"
+        href="/campus-recruit/"
+        aria-label="查看校招冲刺详情"
+      >
         <div class="card-icon">🎯</div>
         <div class="card-text">校招冲刺</div>
-      </div>
-      <div class="floating-card card-4">
+      </a>
+      <a
+        class="floating-card card-4"
+        href="/postgraduate-interview/"
+        aria-label="查看考研复试详情"
+      >
         <div class="card-icon">📚</div>
         <div class="card-text">考研复试</div>
-      </div>
-      <div class="floating-card card-5">
+      </a>
+      <a
+        class="floating-card card-5"
+        href="/contest/"
+        aria-label="查看竞赛指导详情"
+      >
         <div class="card-icon">🏆</div>
         <div class="card-text">竞赛指导</div>
-      </div>
-      <div class="floating-card card-6">
+      </a>
+      <a
+        class="floating-card card-6"
+        href="/community/"
+        aria-label="查看资源圈子详情"
+      >
         <div class="card-icon">🌐</div>
         <div class="card-text">资源圈子</div>
-      </div>
+      </a>
     </div>
   </div>
 </section>
