--- a/src/html/sections/header.html
+++ b/src/html/sections/header.html
@@ -1,17 +1,17 @@
 <!-- 导航栏 -->
 <header class="header">
   <nav class="nav container">
-    <a href="#top" class="logo">
-      <img src="assets/logo.png" alt="EaglesLab" class="logo-full" />
-      <img src="assets/favicon.ico" alt="EaglesLab" class="logo-icon" />
+    <a href="/#top" class="logo">
+      <img src="/assets/logo.png" alt="EaglesLab" class="logo-full" />
+      <img src="/assets/favicon.ico" alt="EaglesLab" class="logo-icon" />
     </a>
     <ul class="nav-menu">
-      <li><a href="#top">首页</a></li>
-      <li><a href="#courses">陪跑服务</a></li>
-      <li><a href="#cases">学员案例</a></li>
-      <li><a href="#sites">旗下站点</a></li>
-      <li><a href="#about">关于我们</a></li>
-      <li><a href="#contact" class="nav-cta">免费咨询</a></li>
+      <li><a href="/#top">首页</a></li>
+      <li><a href="/#courses">陪跑服务</a></li>
+      <li><a href="/#cases">学员案例</a></li>
+      <li><a href="/#sites">旗下站点</a></li>
+      <li><a href="/#about">关于我们</a></li>
+      <li><a href="/#contact" class="nav-cta">免费咨询</a></li>
     </ul>
     <button class="mobile-toggle" aria-label="Toggle menu">
       <span></span>
