feat: 添加技能认证和竞赛成果展示页面
在技能页面添加 CISP、HCNP、RHCE 三大类认证证书展示区域
在竞赛页面添加多个竞赛获奖证书展示区域
为两个页面新增响应式网格布局和交互样式
添加大量证书图片资源（缩略图和大图）

--- a/src/html/pages/contest.html
+++ b/src/html/pages/contest.html
@@ -25,9 +25,392 @@
       </div>
     </div>
 
+    <div class="service-achievements">
+      <div class="service-section-head">
+        <h2 class="service-section-title">成果展示</h2>
+      </div>
+
+      <div class="certificate-grid">
+        <figure class="certificate-card">
+          <a
+            class="certificate-link"
+            href="/assets/images/contests/p-full-algorithm-elite-01.webp"
+            target="_blank"
+            rel="noreferrer"
+            aria-label="查看大图：algorithm-elite-01"
+          >
+            <img
+              class="certificate-image"
+              src="/assets/images/contests/p-thumb-algorithm-elite-01.webp"
+              alt="竞赛证书：algorithm-elite-01"
+              loading="lazy"
+            />
+          </a>
+        </figure>
+
+        <figure class="certificate-card">
+          <a
+            class="certificate-link"
+            href="/assets/images/contests/p-full-huawei-cup-01.webp"
+            target="_blank"
+            rel="noreferrer"
+            aria-label="查看大图：huawei-cup-01"
+          >
+            <img
+              class="certificate-image"
+              src="/assets/images/contests/p-thumb-huawei-cup-01.webp"
+              alt="竞赛证书：huawei-cup-01"
+              loading="lazy"
+            />
+          </a>
+        </figure>
+
+        <figure class="certificate-card">
+          <a
+            class="certificate-link"
+            href="/assets/images/contests/p-full-lanqiao-01.webp"
+            target="_blank"
+            rel="noreferrer"
+            aria-label="查看大图：lanqiao-01"
+          >
+            <img
+              class="certificate-image"
+              src="/assets/images/contests/p-thumb-lanqiao-01.webp"
+              alt="竞赛证书：lanqiao-01"
+              loading="lazy"
+            />
+          </a>
+        </figure>
+
+        <figure class="certificate-card">
+          <a
+            class="certificate-link"
+            href="/assets/images/contests/p-full-lanqiao-02.webp"
+            target="_blank"
+            rel="noreferrer"
+            aria-label="查看大图：lanqiao-02"
+          >
+            <img
+              class="certificate-image"
+              src="/assets/images/contests/p-thumb-lanqiao-02.webp"
+              alt="竞赛证书：lanqiao-02"
+              loading="lazy"
+            />
+          </a>
+        </figure>
+
+        <figure class="certificate-card">
+          <a
+            class="certificate-link"
+            href="/assets/images/contests/p-full-lanqiao-03.webp"
+            target="_blank"
+            rel="noreferrer"
+            aria-label="查看大图：lanqiao-03"
+          >
+            <img
+              class="certificate-image"
+              src="/assets/images/contests/p-thumb-lanqiao-03.webp"
+              alt="竞赛证书：lanqiao-03"
+              loading="lazy"
+            />
+          </a>
+        </figure>
+
+        <figure class="certificate-card">
+          <a
+            class="certificate-link"
+            href="/assets/images/contests/p-full-lanqiao-05.webp"
+            target="_blank"
+            rel="noreferrer"
+            aria-label="查看大图：lanqiao-05"
+          >
+            <img
+              class="certificate-image"
+              src="/assets/images/contests/p-thumb-lanqiao-05.webp"
+              alt="竞赛证书：lanqiao-05"
+              loading="lazy"
+            />
+          </a>
+        </figure>
+
+        <figure class="certificate-card">
+          <a
+            class="certificate-link"
+            href="/assets/images/contests/p-full-lanqiao-06.webp"
+            target="_blank"
+            rel="noreferrer"
+            aria-label="查看大图：lanqiao-06"
+          >
+            <img
+              class="certificate-image"
+              src="/assets/images/contests/p-thumb-lanqiao-06.webp"
+              alt="竞赛证书：lanqiao-06"
+              loading="lazy"
+            />
+          </a>
+        </figure>
+
+        <figure class="certificate-card">
+          <a
+            class="certificate-link"
+            href="/assets/images/contests/p-full-lanqiao-07.webp"
+            target="_blank"
+            rel="noreferrer"
+            aria-label="查看大图：lanqiao-07"
+          >
+            <img
+              class="certificate-image"
+              src="/assets/images/contests/p-thumb-lanqiao-07.webp"
+              alt="竞赛证书：lanqiao-07"
+              loading="lazy"
+            />
+          </a>
+        </figure>
+
+        <figure class="certificate-card">
+          <a
+            class="certificate-link"
+            href="/assets/images/contests/p-full-network-tech-challenge-copy.webp"
+            target="_blank"
+            rel="noreferrer"
+            aria-label="查看大图：network-tech-challenge-copy"
+          >
+            <img
+              class="certificate-image"
+              src="/assets/images/contests/p-thumb-network-tech-challenge-copy.webp"
+              alt="竞赛证书：network-tech-challenge-copy"
+              loading="lazy"
+            />
+          </a>
+        </figure>
+
+        <figure class="certificate-card">
+          <a
+            class="certificate-link"
+            href="/assets/images/contests/p-full-network-tech-challenge.webp"
+            target="_blank"
+            rel="noreferrer"
+            aria-label="查看大图：network-tech-challenge"
+          >
+            <img
+              class="certificate-image"
+              src="/assets/images/contests/p-thumb-network-tech-challenge.webp"
+              alt="竞赛证书：network-tech-challenge"
+              loading="lazy"
+            />
+          </a>
+        </figure>
+
+        <figure class="certificate-card">
+          <a
+            class="certificate-link"
+            href="/assets/images/contests/p-full-programming-contest.webp"
+            target="_blank"
+            rel="noreferrer"
+            aria-label="查看大图：programming-contest"
+          >
+            <img
+              class="certificate-image"
+              src="/assets/images/contests/p-thumb-programming-contest.webp"
+              alt="竞赛证书：programming-contest"
+              loading="lazy"
+            />
+          </a>
+        </figure>
+
+        <figure class="certificate-card">
+          <a
+            class="certificate-link"
+            href="/assets/images/contests/p-full-robot-contest.webp"
+            target="_blank"
+            rel="noreferrer"
+            aria-label="查看大图：robot-contest"
+          >
+            <img
+              class="certificate-image"
+              src="/assets/images/contests/p-thumb-robot-contest.webp"
+              alt="竞赛证书：robot-contest"
+              loading="lazy"
+            />
+          </a>
+        </figure>
+
+        <figure class="certificate-card certificate-card--wide">
+          <a
+            class="certificate-link"
+            href="/assets/images/contests/l-full-datang-cup-01.webp"
+            target="_blank"
+            rel="noreferrer"
+            aria-label="查看大图：datang-cup-01"
+          >
+            <img
+              class="certificate-image"
+              src="/assets/images/contests/l-thumb-datang-cup-01.webp"
+              alt="竞赛证书：datang-cup-01"
+              loading="lazy"
+            />
+          </a>
+        </figure>
+
+        <figure class="certificate-card certificate-card--wide">
+          <a
+            class="certificate-link"
+            href="/assets/images/contests/l-full-datang-cup-02.webp"
+            target="_blank"
+            rel="noreferrer"
+            aria-label="查看大图：datang-cup-02"
+          >
+            <img
+              class="certificate-image"
+              src="/assets/images/contests/l-thumb-datang-cup-02.webp"
+              alt="竞赛证书：datang-cup-02"
+              loading="lazy"
+            />
+          </a>
+        </figure>
+
+        <figure class="certificate-card certificate-card--wide">
+          <a
+            class="certificate-link"
+            href="/assets/images/contests/l-full-developer-contest.webp"
+            target="_blank"
+            rel="noreferrer"
+            aria-label="查看大图：developer-contest"
+          >
+            <img
+              class="certificate-image"
+              src="/assets/images/contests/l-thumb-developer-contest.webp"
+              alt="竞赛证书：developer-contest"
+              loading="lazy"
+            />
+          </a>
+        </figure>
+
+        <figure class="certificate-card certificate-card--wide">
+          <a
+            class="certificate-link"
+            href="/assets/images/contests/l-full-ican-01.webp"
+            target="_blank"
+            rel="noreferrer"
+            aria-label="查看大图：ican-01"
+          >
+            <img
+              class="certificate-image"
+              src="/assets/images/contests/l-thumb-ican-01.webp"
+              alt="竞赛证书：ican-01"
+              loading="lazy"
+            />
+          </a>
+        </figure>
+
+        <figure class="certificate-card certificate-card--wide">
+          <a
+            class="certificate-link"
+            href="/assets/images/contests/l-full-math-contest.webp"
+            target="_blank"
+            rel="noreferrer"
+            aria-label="查看大图：math-contest"
+          >
+            <img
+              class="certificate-image"
+              src="/assets/images/contests/l-thumb-math-contest.webp"
+              alt="竞赛证书：math-contest"
+              loading="lazy"
+            />
+          </a>
+        </figure>
+
+        <figure class="certificate-card certificate-card--wide">
+          <a
+            class="certificate-link"
+            href="/assets/images/contests/l-full-robot-ai-01.webp"
+            target="_blank"
+            rel="noreferrer"
+            aria-label="查看大图：robot-ai-01"
+          >
+            <img
+              class="certificate-image"
+              src="/assets/images/contests/l-thumb-robot-ai-01.webp"
+              alt="竞赛证书：robot-ai-01"
+              loading="lazy"
+            />
+          </a>
+        </figure>
+
+        <figure class="certificate-card certificate-card--wide">
+          <a
+            class="certificate-link"
+            href="/assets/images/contests/l-full-robot-ai-02.webp"
+            target="_blank"
+            rel="noreferrer"
+            aria-label="查看大图：robot-ai-02"
+          >
+            <img
+              class="certificate-image"
+              src="/assets/images/contests/l-thumb-robot-ai-02.webp"
+              alt="竞赛证书：robot-ai-02"
+              loading="lazy"
+            />
+          </a>
+        </figure>
+
+        <figure class="certificate-card certificate-card--wide">
+          <a
+            class="certificate-link"
+            href="/assets/images/contests/l-full-robot-ai-03.webp"
+            target="_blank"
+            rel="noreferrer"
+            aria-label="查看大图：robot-ai-03"
+          >
+            <img
+              class="certificate-image"
+              src="/assets/images/contests/l-thumb-robot-ai-03.webp"
+              alt="竞赛证书：robot-ai-03"
+              loading="lazy"
+            />
+          </a>
+        </figure>
+
+        <figure class="certificate-card certificate-card--wide">
+          <a
+            class="certificate-link"
+            href="/assets/images/contests/l-full-service-outsourcing-01.webp"
+            target="_blank"
+            rel="noreferrer"
+            aria-label="查看大图：service-outsourcing-01"
+          >
+            <img
+              class="certificate-image"
+              src="/assets/images/contests/l-thumb-service-outsourcing-01.webp"
+              alt="竞赛证书：service-outsourcing-01"
+              loading="lazy"
+            />
+          </a>
+        </figure>
+
+        <figure class="certificate-card certificate-card--wide">
+          <a
+            class="certificate-link"
+            href="/assets/images/contests/l-full-service-outsourcing-award-01.webp"
+            target="_blank"
+            rel="noreferrer"
+            aria-label="查看大图：service-outsourcing-award-01"
+          >
+            <img
+              class="certificate-image"
+              src="/assets/images/contests/l-thumb-service-outsourcing-award-01.webp"
+              alt="竞赛证书：service-outsourcing-award-01"
+              loading="lazy"
+            />
+          </a>
+        </figure>
+      </div>
+    </div>
+
     <div class="service-cta">
-      <a class="cta-button" href="/#contact"><span>立即咨询</span></a>
+      <a class="cta-button" href="/#contact" data-cta="consult"
+        ><span data-cta-label="consult">获取更多</span></a
+      >
     </div>
   </div>
 </section>
-
