--- a/src/html/pages/skills.html
+++ b/src/html/pages/skills.html
@@ -25,9 +25,228 @@
       </div>
     </div>
 
+    <div class="service-achievements">
+      <div class="service-section-head">
+        <h2 class="service-section-title">认证展示</h2>
+      </div>
+
+      <div class="credential-groups">
+        <div class="credential-group">
+          <h3 class="credential-group-title">CISP</h3>
+          <div class="credential-grid">
+            <figure class="credential-card">
+              <a
+                class="credential-link"
+                href="/assets/images/skills/l-full-ktz-cisp.webp"
+                target="_blank"
+                rel="noreferrer"
+                aria-label="查看大图：ktz-cisp"
+              >
+                <img
+                  class="credential-image"
+                  src="/assets/images/skills/l-thumb-ktz-cisp.webp"
+                  alt="CISP 证书：ktz"
+                  loading="lazy"
+                />
+              </a>
+            </figure>
+            <figure class="credential-card">
+              <a
+                class="credential-link"
+                href="/assets/images/skills/l-full-yhc-cisp.webp"
+                target="_blank"
+                rel="noreferrer"
+                aria-label="查看大图：yhc-cisp"
+              >
+                <img
+                  class="credential-image"
+                  src="/assets/images/skills/l-thumb-yhc-cisp.webp"
+                  alt="CISP 证书：yhc"
+                  loading="lazy"
+                />
+              </a>
+            </figure>
+            <figure class="credential-card">
+              <a
+                class="credential-link"
+                href="/assets/images/skills/l-full-yjh-cisp.webp"
+                target="_blank"
+                rel="noreferrer"
+                aria-label="查看大图：yjh-cisp"
+              >
+                <img
+                  class="credential-image"
+                  src="/assets/images/skills/l-thumb-yjh-cisp.webp"
+                  alt="CISP 证书：yjh"
+                  loading="lazy"
+                />
+              </a>
+            </figure>
+            <figure class="credential-card">
+              <a
+                class="credential-link"
+                href="/assets/images/skills/l-full-zdq-cisp.webp"
+                target="_blank"
+                rel="noreferrer"
+                aria-label="查看大图：zdq-cisp"
+              >
+                <img
+                  class="credential-image"
+                  src="/assets/images/skills/l-thumb-zdq-cisp.webp"
+                  alt="CISP 证书：zdq"
+                  loading="lazy"
+                />
+              </a>
+            </figure>
+          </div>
+        </div>
+
+        <div class="credential-group">
+          <h3 class="credential-group-title">HCNP</h3>
+          <div class="credential-grid">
+            <figure class="credential-card">
+              <a
+                class="credential-link"
+                href="/assets/images/skills/l-full-gzc-hcnp.webp"
+                target="_blank"
+                rel="noreferrer"
+                aria-label="查看大图：gzc-hcnp"
+              >
+                <img
+                  class="credential-image"
+                  src="/assets/images/skills/l-thumb-gzc-hcnp.webp"
+                  alt="HCNP 证书：gzc"
+                  loading="lazy"
+                />
+              </a>
+            </figure>
+            <figure class="credential-card">
+              <a
+                class="credential-link"
+                href="/assets/images/skills/l-full-hem-hcnp.webp"
+                target="_blank"
+                rel="noreferrer"
+                aria-label="查看大图：hem-hcnp"
+              >
+                <img
+                  class="credential-image"
+                  src="/assets/images/skills/l-thumb-hem-hcnp.webp"
+                  alt="HCNP 证书：hem"
+                  loading="lazy"
+                />
+              </a>
+            </figure>
+            <figure class="credential-card">
+              <a
+                class="credential-link"
+                href="/assets/images/skills/l-full-jqw-hcnp.webp"
+                target="_blank"
+                rel="noreferrer"
+                aria-label="查看大图：jqw-hcnp"
+              >
+                <img
+                  class="credential-image"
+                  src="/assets/images/skills/l-thumb-jqw-hcnp.webp"
+                  alt="HCNP 证书：jqw"
+                  loading="lazy"
+                />
+              </a>
+            </figure>
+            <figure class="credential-card">
+              <a
+                class="credential-link"
+                href="/assets/images/skills/l-full-zys-hcnp.webp"
+                target="_blank"
+                rel="noreferrer"
+                aria-label="查看大图：zys-hcnp"
+              >
+                <img
+                  class="credential-image"
+                  src="/assets/images/skills/l-thumb-zys-hcnp.webp"
+                  alt="HCNP 证书：zys"
+                  loading="lazy"
+                />
+              </a>
+            </figure>
+          </div>
+        </div>
+
+        <div class="credential-group">
+          <h3 class="credential-group-title">RHCE</h3>
+          <div class="credential-grid">
+            <figure class="credential-card">
+              <a
+                class="credential-link"
+                href="/assets/images/skills/l-full-cs-rhce.webp"
+                target="_blank"
+                rel="noreferrer"
+                aria-label="查看大图：cs-rhce"
+              >
+                <img
+                  class="credential-image"
+                  src="/assets/images/skills/l-thumb-cs-rhce.webp"
+                  alt="RHCE 证书：cs"
+                  loading="lazy"
+                />
+              </a>
+            </figure>
+            <figure class="credential-card">
+              <a
+                class="credential-link"
+                href="/assets/images/skills/l-full-csy-rhce.webp"
+                target="_blank"
+                rel="noreferrer"
+                aria-label="查看大图：csy-rhce"
+              >
+                <img
+                  class="credential-image"
+                  src="/assets/images/skills/l-thumb-csy-rhce.webp"
+                  alt="RHCE 证书：csy"
+                  loading="lazy"
+                />
+              </a>
+            </figure>
+            <figure class="credential-card">
+              <a
+                class="credential-link"
+                href="/assets/images/skills/l-full-wsm-rhce.webp"
+                target="_blank"
+                rel="noreferrer"
+                aria-label="查看大图：wsm-rhce"
+              >
+                <img
+                  class="credential-image"
+                  src="/assets/images/skills/l-thumb-wsm-rhce.webp"
+                  alt="RHCE 证书：wsm"
+                  loading="lazy"
+                />
+              </a>
+            </figure>
+            <figure class="credential-card">
+              <a
+                class="credential-link"
+                href="/assets/images/skills/l-full-zj-rhce.webp"
+                target="_blank"
+                rel="noreferrer"
+                aria-label="查看大图：zj-rhce"
+              >
+                <img
+                  class="credential-image"
+                  src="/assets/images/skills/l-thumb-zj-rhce.webp"
+                  alt="RHCE 证书：zj"
+                  loading="lazy"
+                />
+              </a>
+            </figure>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div class="service-cta">
-      <a class="cta-button" href="/#contact"><span>立即咨询</span></a>
+      <a class="cta-button" href="/#contact" data-cta="consult"
+        ><span data-cta-label="consult">获取更多</span></a
+      >
     </div>
   </div>
 </section>
-
